# gd_hri

./: .gitignore  .gitmodules  0build.sh  0build_vlm.sh  1run.sh  1run_detector.sh  1run_vlm.sh  1run_vlm_recv.sh  1run_vlm_toggle.sh  2run_image_saver.sh  ReadMe.md
docker/: Dockerfile  commit.sh  exec.sh  start.sh
launch/: gdh_test.launch.xml  gdh_test_vlm.launch.xml
models/: README_for_gd_demo.txt  audio_cmd_list.txt  code_sentence_table.txt  gdh_config.yaml
rosbag/: play.bash
rosbag/rosbag2_2024_07_11-16_34_43/: metadata.yaml
src/gd_ifc_pkg/: CMakeLists.txt  CMakeLists.txt.first  CMakeLists.txt.org  package.xml
src/gd_ifc_pkg/msg/: BboxMsg.msg  DetectedObj.msg  GDGGuidancePoint.msg  GDGStatus.msg  GDHDetection2DExt.msg  GDHStatus.msg  GDIMode.msg  GDMDetections.msg  GDMPrediction.msg  GDMPredictions.msg  GDMSemanticSegmentation.msg  GDMTracks.msg  GDQHarnessGrip.msg  GDQInitialization.msg  GDQStatus.msg  UserCommand.msg  list
src/gd_ifc_pkg/msg및srv파일/gdh_interfaces/: CMakeLists.txt  package.xml
src/gd_ifc_pkg/msg및srv파일/gdh_interfaces/srv/: GDHDetectStaticObjectAll.srv  GDHExplainPathGP.srv
src/gd_ifc_pkg/msg및srv파일/msg/: GDIMode.msg  GDMDetection.msg  GDMDetections.msg  GDMPredictions.msg  GDMTrack.msg  GDMTracks.msg  GDQRobotMode.msg
src/gd_ifc_pkg/msg및srv파일/srv/: GDGGetPoiList.srv  GDHDetectStaticObject.srv  GDHDetectStaticTargetObject.srv
src/gd_ifc_pkg/srv/: GDGGetCourseList.srv  GDGGetImageGuidancePoint.srv  GDGGuideAssist.srv  GDGGuideCourse.srv  GDGGuidePoi.srv  GDGStopGuide.srv  GDHDetectStaticObject (사본 1).srv  GDHDetectStaticObject.srv  GDHDetectStaticObjectAll (사본 1).srv  GDHDetectStaticObjectAll.srv  GDHDetectStaticTargetObject (사본 1).srv  GDHInitializeDetectStaticObject (사본 1).srv  GDHSpeakCodeID (사본 1).srv  GDMException.srv  GDQEstimatedBaseVelocities.srv  GdqSrv2.srv
src/gdh_image/: package.xml  setup.cfg  setup.py
src/gdh_image/gdh_image/: image_publisher_node.py  image_viewer_node.py
src/gdh_interfaces/: CMakeLists.txt
src/gdh_interfaces/msg/: GDHDetections.msg  GDHStatus.msg
src/gdh_interfaces/srv/: GDHDetectStaticTargetObject.srv  GDHStartDetectObject.srv
src/gdh_node/: package.xml  setup.cfg  setup.py
src/gdh_node/gdh_node/: client_member_function_det_all.py  client_member_function_init_det.py  client_member_function_term_det.py  service_member_function.py
src/gdh_package/: package.xml  setup.cfg  setup.py
src/gdh_package/gdh_package/: __init__.py  client_code_send.py  client_member_function_display_detect.py  client_member_function_start_detect.py  erp_rectify.py  (+9 more)
src/gdh_speech_audio/: package.xml  setup.cfg  setup.py
src/gdh_vlm_client/: package.xml  setup.cfg  setup.py
src/py_pubsub/: package.xml  setup.py
src/py_srvcli/: package.xml  setup.py
src/ros2_gopro/: package.xml  setup.cfg  setup.py
src/utils/: rosbag_erp_to_rect_video.py
(+25 files in other folders)
